# ghostcellify

./: .gitignore  Cargo.toml  README.md  dlist  libbree.rlib  libcircle.rlib  libdlist.rlib  libdlist_lifetime.rlib  rust-toolchain.toml
benches/bree/: bree.fixed.rs  bree.rs
benches/circle-dll/: circle_dll.rs
benches/dfsgraph/: dfsgraph.rs
benches/dlist/: dlist.fixed.rs  dlist.rs
benches/graph/: rust_gapbs.rs  rust_gapbs_std.fixed.rs  rust_gapbs_std.rs  rust_gapbs_std_toy.fixed.rs  rust_gapbs_std_toy.rs
benches/skiplist/: skiplist.rs
ghostcell_macros/: Cargo.toml
ghostcell_macros/src/: lib.rs
ghostcellify/: Cargo.toml  circle  libcircle_gen.rlib  toy
ghostcellify/src/: analysis.rs  cli.rs  compiler.rs  compiler_interface.rs  constants.rs  io.rs  lib.rs  passes.rs  rustfix_utils.rs  transform.rs  types.rs  utils.rs
ghostcellify/src/analysis/: span.rs
ghostcellify/src/passes/: callgraph.rs  lifetime_rewrite.rs  struct_info.rs  token_analysis.rs
